--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -13,7 +13,12 @@ html {
 @layer base {
     body {
         @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
+        
       }
+      body{
+        @apply  font-[Raleway];
+      }
+      
     li{
         @apply cursor-pointer
     }
