--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,15 +11,15 @@ html {
 }
 
 @layer base {
-    body {
+    /* body {
         @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
-        
-      }
+
+      } */
       body{
         @apply  font-[Raleway];
       }
-      
-   
+
+
     button {
         @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-white
       }
