--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,10 +11,10 @@ html {
 }
 
 @layer base {
-    body {
+    /* body {
         @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide
         
-      }
+      } */
       body{
         @apply  font-[Raleway];
       }
